@@ -60,9 +60,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <release>24</release>
+            <release>25</release>
             <jdkToolchain>
-              <version>24</version>
+              <version>25</version>
             </jdkToolchain>
             <compilerArgs>
               <arg>--add-modules</arg>
@@ -76,6 +76,8 @@
           <version>${surefire.version}</version>
           <configuration>
             <argLine>
+              -XX:-UseCompactObjectHeaders
+              --add-opens java.base/java.nio=ALL-UNNAMED
               --add-modules jdk.incubator.vector
               -Djdk.attach.allowAttachSelf=true
               --enable-native-access=ALL-UNNAMED
